use article title with icon

--- a/source/2015-04-14-make-blog.html.md
+++ b/source/2015-04-14-make-blog.html.md
@@ -6,6 +6,8 @@ tags:
 
 こんにちは、funnythingzです。 `funnythingz` っていうblogをつくりはじめました。
 
+READMORE
+
 だいたいそんなにblogを書きまくるタイプではないのですが、ゆにこさんっていうすごいデザイナーの人がmiddlemanで[yunicode](http://yuni.co/)っていうステキなblogをつくったので負けじとつくってみることにしました。
 
 テックブログ的なのは[ひろぽっぽれす](http://hiropo.co.uk/)というblogをやっているのですが、テックブログってついつい面倒くさくなって書かなくなるので日常的にどうでもいいこととか書けて続くようなblogを始めてみようと思います。
