--- a/source/2015-04-15-design.html.md
+++ b/source/2015-04-15-design.html.md
@@ -6,7 +6,11 @@ tags:
 
 こんばんは、funnythingzです。雑ですが一瞬でデザインできました。適度に満足です。
 
-こんな感じでCodeも書けちゃう
+例えばこんな感じ。
+
+READMORE
+
+Goもhighlightされちゃう。
 
 ```go
 package main
