--- a/source/2015-04-16-infra.html.md
+++ b/source/2015-04-16-infra.html.md
@@ -2,6 +2,8 @@
 title: Androidアプリをつくる前にAPIのインフラ周りを考える
 date: 2015-04-16 00:46 JST
 tags:
+  - Android
+  - Infra
 ---
 
 突然のこんばんは、funnythingzです。夜です、ねむいです。
