--- a/source/2015-05-12-mach.html.md
+++ b/source/2015-05-12-mach.html.md
@@ -1,6 +1,12 @@
 ---
-title: mach
+title: マッハGoGoGo打ちまくった
 date: 2015-05-12 23:59 JST
 tags:
+- slot
 ---
 
+メダル不要機をつけたのでとにかく打ちまくった。
+
+ゴーゴータイム気持ちいー！いろんな演出が懐かしくてついつい動画を撮ってしまった。
+
+目押しできてないのは許してください。
