--- a/source/2015-05-12-mach.html.md
+++ b/source/2015-05-12-mach.html.md
@@ -11,4 +11,6 @@ tags:
 
 目押しできてないのは許してください。
 
+READMORE
+
 <iframe width="640" height="480" src="https://www.youtube.com/embed/SRu2tWu8OWs" frameborder="0" allowfullscreen></iframe>
