--- a/source/2015-08-08-cold-men.html.md
+++ b/source/2015-08-08-cold-men.html.md
@@ -3,7 +3,7 @@ title: 冷やし酸辣湯麺をつくったのでレシピをメモっとく
 date: 2015-08-08 15:36 JST
 tags:
 - 麺
-- dialy
+- diary
 ---
 
 自宅でも冷やし酸辣湯麺を食べたくて自分なりのレシピをつくってみたのでメモっとく。
