removed blog of tag

--- a/source/2015-04-15-design.html.md
+++ b/source/2015-04-15-design.html.md
@@ -3,7 +3,7 @@ title: design
 date: 2015-04-15 00:34 JST
 tags:
   - design
-  - blog
+  - diary
 ---
 
 こんばんは、funnythingzです。雑ですが一瞬でデザインできました。適度に満足です。
